// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Policy Evaluation View Test error in step evaluation 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepDetailsTab"
          >
            details
          </span>
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepInputTab"
          >
            common.input
          </span>
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepOutputTab"
          >
            outputLabel
          </span>
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <div
            class="errorMsg error"
          >
            <div
              class="title"
            >
              errorSummaryText
            </div>
            <p>
              Failure to evaluate step
            </p>
          </div>
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration:
                </th>
                <td>
                  <span
                    class="StyledProps--font StyledProps--main timer StyledProps--inline"
                  >
                    
                    0s
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-left-large"
          >
            common.policy.noPolicyEvalResult
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Policy Evaluation View Test failure responses 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepDetailsTab"
          >
            details
          </span>
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepInputTab"
          >
            common.input
          </span>
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepOutputTab"
          >
            outputLabel
          </span>
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_STEP_DETAILS"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_STEP_DETAILS"
        role="tabpanel"
      >
        <div
          class="detailsTab"
        >
          <div
            class="Layout--vertical StyledProps--main container shrink StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
          >
            <div
              class="StyledProps--font StyledProps--main scroll"
            />
          </div>
          <table
            class="detailsTable"
          >
            <tbody>
              <tr>
                <th>
                  startedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  endedAt:
                </th>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <th>
                  pipeline.duration:
                </th>
                <td>
                  <span
                    class="StyledProps--font StyledProps--main timer StyledProps--inline"
                  >
                    
                    0s
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
          <p
            class="StyledProps--font StyledProps--main StyledProps--margin-left-large"
          >
            common.policy.noPolicyEvalResult
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Policy Evaluation View Test renders snapshot 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_STEP_DETAILS"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="STEP_DETAILS"
          id="bp3-tab-title_step-details_STEP_DETAILS"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepDetailsTab"
          >
            details
          </span>
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_INPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="INPUT"
          id="bp3-tab-title_step-details_INPUT"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepInputTab"
          >
            common.input
          </span>
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_OUTPUT"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="OUTPUT"
          id="bp3-tab-title_step-details_OUTPUT"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepOutputTab"
          >
            outputLabel
          </span>
        </div>
        <div
          aria-controls="bp3-tab-panel_step-details_MANUAL_INTERVENTION"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="MANUAL_INTERVENTION"
          id="bp3-tab-title_step-details_MANUAL_INTERVENTION"
          role="tab"
          tabindex="0"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="manualInterventionTab"
          >
            pipeline.failureStrategies.strategiesLabel.ManualIntervention
          </span>
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_step-details_MANUAL_INTERVENTION"
        class="bp3-tab-panel"
        id="bp3-tab-panel_step-details_MANUAL_INTERVENTION"
        role="tabpanel"
      >
        <div
          class="manualInterventionTab"
        >
          <div
            class="title"
          >
            common.PermissibleActions
          </div>
          <div
            class="actionRow"
          >
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="rollback-stage"
                >
                  <svg
                    height="26"
                    viewBox="0 0 32 32"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M14.523 5.355a.5.5 0 10-.704-.71l-3.057 3.028a.5.5 0 000 .71l3.057 3.029a.5.5 0 10.704-.711L12.33 8.528H26a.5.5 0 01.5.5V26a.5.5 0 01-.5.5H6a.5.5 0 01-.5-.5v-6.526a.5.5 0 10-1 0V26A1.5 1.5 0 006 27.5h20a1.5 1.5 0 001.5-1.5V9.028a1.5 1.5 0 00-1.5-1.5H12.33l2.193-2.173zm-2.525 9.128a1 1 0 00-1 1v4a1 1 0 001 1h8.003a1 1 0 001-1v-4a1 1 0 00-1-1h-8.003zm0 1h8.003v4h-8.003v-4z"
                      fill="#0278D5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.StageRollback
              </p>
              <input
                name="StageRollback"
                type="checkbox"
                value="StageRollback"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-delete StyledProps--main"
                  icon="delete"
                >
                  <svg
                    data-icon="delete"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      delete
                    </desc>
                    <path
                      d="M15 6a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10l3.29-3.29c.19-.18.3-.43.3-.71zm-5-6C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Ignore
              </p>
              <input
                name="Ignore"
                type="checkbox"
                value="Ignore"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-refresh StyledProps--main"
                  icon="refresh"
                >
                  <svg
                    data-icon="refresh"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      refresh
                    </desc>
                    <path
                      d="M19 1c-.55 0-1 .45-1 1v2.06C16.18 1.61 13.29 0 10 0 4.48 0 0 4.48 0 10c0 .55.45 1 1 1s1-.45 1-1c0-4.42 3.58-8 8-8 2.52 0 4.76 1.18 6.22 3H15c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1zm0 8c-.55 0-1 .45-1 1 0 4.42-3.58 8-8 8-2.52 0-4.76-1.18-6.22-3H5c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-2.06C3.82 18.39 6.71 20 10 20c5.52 0 10-4.48 10-10 0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Retry
              </p>
              <input
                name="Retry"
                type="checkbox"
                value="Retry"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M17 4c-.28 0-.53.11-.71.29L7 13.59 3.71 10.3A.965.965 0 003 10a1.003 1.003 0 00-.71 1.71l4 4c.18.18.43.29.71.29s.53-.11.71-.29l10-10A1.003 1.003 0 0017 4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.MarkAsSuccess
              </p>
              <input
                name="MarkAsSuccess"
                type="checkbox"
                value="MarkAsSuccess"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-ban-circle StyledProps--main"
                  icon="ban-circle"
                >
                  <svg
                    data-icon="ban-circle"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      ban-circle
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm5 11H5c-.55 0-1-.45-1-1s.45-1 1-1h10c.55 0 1 .45 1 1s-.45 1-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Abort
              </p>
              <input
                name="Abort"
                type="checkbox"
                value="Abort"
              />
            </label>
          </div>
          <div
            class="actionRow"
          >
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-resume"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 11"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.57 0c.129 0 .243.052.345.118L6.92.11l6.755 4.42c.189.133.324.362.324.627a.732.732 0 01-.33.619l.006.007-6.755 4.421-.006-.007a.631.631 0 01-.345.118c-.371 0-.675-.332-.675-.737V.737c0-.405.304-.737.675-.737zM2.947 0c.406 0 .737.332.737.737v8.842a.739.739 0 01-.737.737H.737A.739.739 0 010 9.579V.737C0 .332.332 0 .737 0z"
                      fill="#4d5969"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.ProceedWithDefaultValues
              </p>
              <input
                name="ProceedWithDefaultValues"
                type="checkbox"
                value="ProceedWithDefaultValues"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="mark-as-failure"
                >
                  <svg
                    height="26"
                    viewBox="0 0 40 40"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.625 10a.75.75 0 01.75-.75h20.049a.75.75 0 01.75.75v9.248h8.579l-2.542-2.43a.75.75 0 011.036-1.085l3.862 3.692a.748.748 0 01.212.854.75.75 0 01-.212.294l-3.862 3.694a.75.75 0 01-1.037-1.084l2.544-2.433-8.58-.002V30a.75.75 0 01-.75.75H4.375a.75.75 0 01-.75-.75V10zm20.049 9.981v9.269H5.125v-18.5h18.549v9.231zM9.937 14.486a.752.752 0 00-1.062 0 .748.748 0 000 1.06L13.341 20l-4.466 4.454a.748.748 0 000 1.06.752.752 0 001.062 0l4.466-4.455 4.465 4.455a.752.752 0 001.062 0 .748.748 0 000-1.06L15.465 20l4.465-4.454a.748.748 0 000-1.06.752.752 0 00-1.062 0l-4.465 4.455-4.466-4.455z"
                      fill="#0278D5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.MarkAsFailure
              </p>
              <input
                name="MarkAsFailure"
                type="checkbox"
                value="MarkAsFailure"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
